test/spec_vectors/i32/fail/module_20.wat
(module (func $type-binary-2nd-operand-empty (i32.const 0) (i32.add) (drop)))